# special-umbrella

./: CMakeLists.txt  README.md  build.sh  configure.sh  git_reload.sh  install.sh
examples/: CMakeLists.txt
examples/first-example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/config/: MyPrgConfig.h.in
tests/: CMakeLists.txt  test.cpp
